[package]
name = "netconsd"
version = "0.1.0"
edition = "2021"
links="netconsd"

[[bin]]
name = "netconsd"
path = "main.rs"

[dependencies]
libc = "0.2.135"
clap = {version = "3.2.22", features = ["derive"] }
anyhow = "1.0.66"
netconsd_module = {path = "rust/module"}
static_modules = {path = "rust/static_modules"}
printer_module = {path = "rust/printer_module", optional = true}
stats_module = {path = "rust/stats_module", optional = true}

[profile.release]
lto = true
strip = true

[features]
printer = ["printer_module"]
stats = ["stats_module"]
